# Rasterizer

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.json
src/: Mat4.h  Mesh.h  ObjLoader.cpp  ObjLoader.h  Renderer.cpp  Renderer.h  Texture.h  TgaLoader.cpp  TgaLoader.h  Vec2.h  Vec3.h  Vec4.h  main.cpp
